--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,5 @@
 body {
+  color: #6a6f74;
   font-family: Roboto;
 }
 
@@ -6,7 +7,7 @@ h1 {
   text-align: center;
 }
 
-ul {
+.main-page-list {
   list-style: none;
   text-align: center;
 }
@@ -17,5 +18,5 @@ a {
 }
 
 a:hover {
-  background-color: aqua;
+  background-color: #ced4da;
 }
