--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,7 @@
 body {
   color: #6a6f74;
   font-family: Roboto;
-  width: 600px;
+  width: 800px;
   margin: 0 auto;
 }
 
@@ -14,6 +14,11 @@ h2 {
   text-align: center;
   margin-bottom: 80px;
   text-decoration: underline;
+  text-align: left;
+}
+
+.menu {
+  text-align: center;
 }
 
 .main-page-list {
@@ -34,4 +39,9 @@ a:hover {
 
 li {
   margin-bottom: 5px;
+}
+
+img {
+  border: 4px solid #6a6f74;
+  border-radius: 30px;
 }
